# LrnProf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: logs.rs  main.rs  utils.rs
src/profiler/: mod.rs  parser.rs  utils.rs
