[package]
name = "lrnprof"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
libc = "0.2"
embed_plist = "1.2"
mach2 = "0.4.2"
backtrace = "0.3.60"
read-process-memory = "0.1.6"
symbolic-demangle = "12.13.4"
symbolic-common = "12.13.4"
lrncore = { git = "https://github.com/Lrn-projects/LrnCore.git", version = "0.1.0", branch="main" }